Add photos to review

--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -4,29 +4,64 @@
     android:layout_height="match_parent"
     android:background="#f6f6f6">
     <include layout="@layout/view_toolbar" />
-    <FrameLayout
-        android:id="@+id/header"
+    <RelativeLayout
+        android:id="@+id/add_photo_layout"
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/white">
-        <RatingBar
-            android:id="@+id/rating_bar"
-            android:layout_marginTop="17dp"
-            style="@style/CustomRatingBar"
-            android:rating="1"
+        android:layout_height="150dp">
+        <TextView
+            android:id="@+id/add_photo_title"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="29dp"
-            android:stepSize="1.0"
-            android:numStars="5"/>
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#b2b2b2"
+            android:text="@string/add_photos"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/photos"
+            android:textColor="@color/black_text"
+            android:textSize="15sp" />
+
+        <ImageButton
+            android:id="@+id/btn_add_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:clickable="true"
+            android:background="@drawable/ic_plus_addds" />
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_below="@+id/btn_add_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:id="@+id/photos_rc"/>
+
+    </RelativeLayout>
+    <FrameLayout
+        android:layout_marginTop="15dp"
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/white">
+        <RatingBar
+            android:id="@+id/rating_bar"
+            style="@style/CustomRatingBar"
+            android:rating="1"
+            android:layout_width="wrap_content"
             android:layout_gravity="center"
-            android:text="Tap a flag to rate"
-            android:textSize="13sp"
-            android:textColor="#9f9f9f"
-            android:layout_marginTop="15dp" />
+            android:layout_height="29dp"
+
+            android:stepSize="1.0"
+            android:numStars="5"/>
     </FrameLayout>
     <LinearLayout
         android:layout_below="@+id/header"
@@ -34,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp">
         <RelativeLayout
             android:layout_width="match_parent"
