--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -567,6 +567,7 @@
                         android:layout_marginTop="11dp"
                         android:gravity="center"/>
                     <Button
+                        android:id="@+id/btn_show_all_reviews"
                         android:layout_width="320dp"
                         android:layout_height="45dp"
                         android:layout_marginTop="22dp"
