--- a/trunk/ddscanner/app/src/main/res/layout/activity_reviews.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_reviews.xml
@@ -1,85 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6"
-    android:orientation="vertical">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#f6f6f6">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <include layout="@layout/view_toolbar" />
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/reviews_rc"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_below="@+id/toolbar"
-            android:background="@color/white">
-
-            <ImageView
-                android:id="@+id/ds_photo"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/rewiews_photo" />
-
-            <TextView
-                android:id="@+id/ds_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="14dp"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/ds_photo"
-                android:fontFamily="sans-serif-medium"
-                android:text="Blue hole"
-                android:lines="1"
-                android:ellipsize="end"
-                android:textColor="@color/black_text"
-                android:textSize="20sp" />
-
-            <LinearLayout
-                android:id="@+id/stars"
-                android:layout_width="wrap_content"
-                android:layout_height="14dp"
-                android:layout_below="@+id/ds_title"
-                android:layout_marginLeft="14dp"
-                android:layout_marginTop="6dp"
-                android:layout_toRightOf="@+id/ds_photo"
-                android:orientation="horizontal" />
-
-            <TextView
-                android:id="@+id/ds_reviews"
-                android:layout_width="wrap_content"
-                android:layout_height="14dp"
-                android:layout_below="@+id/ds_title"
-                android:layout_marginTop="6dp"
-                android:layout_toRightOf="@+id/stars"
-                android:text="No reviews"
-                android:textSize="12sp" />
-        </RelativeLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:layout_below="@+id/header"
-                    android:layout_above="@+id/leave_review"
-                    android:scrollbars="vertical"
-                    android:id="@+id/comm_rc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp" />
-
-
-        <Button
-            android:id="@+id/leave_review"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:background="#ffd21c"
-            android:fontFamily="sans-serif-medium"
-            android:text="WRITE A REVIEW"
-            android:textSize="15sp" />
-    </RelativeLayout>
-</LinearLayout>
+        android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_write_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_acb_edit"
+        app:backgroundTint="@color/orange"
+        android:layout_margin="14dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
