--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -1,74 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:layout_marginTop="6dp"
-    android:paddingBottom="10dp">
-    <ImageView
-        android:id="@+id/user_avatar"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginLeft="14dp"/>
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_toRightOf="@+id/user_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@color/black_text"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="10dp"
-        />
-    <RelativeLayout
-        android:id="@+id/rating_layout"
-        android:layout_toRightOf="@+id/user_avatar"
-        android:layout_below="@+id/user_name"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp">
-    <TextView
-        android:id="@+id/rated"
-        android:layout_marginTop="1dp"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:text="RATED"
-        android:layout_marginLeft="11dp"
-        android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@color/black_text"
-        />
-        <RelativeLayout
-            android:layout_marginLeft="4dp"
-            android:layout_toRightOf="@+id/rated"
-            android:layout_width="15dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rating_rectangle">
-            <TextView
-                android:id="@+id/rating"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:text="1"
-                android:textColor="@color/white"/>
-        </RelativeLayout>
+    android:orientation="vertical"
+    android:layout_marginBottom="15dp">
 
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/review"
-        android:layout_below="@+id/rating_layout"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:textSize="14sp"
-        android:paddingLeft="14dp"
-        android:paddingTop="14dp"
-        android:paddingRight="14dp"
-        android:textColor="#616161">
-        </TextView>
-</RelativeLayout>
+        android:orientation="vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginBottom="11dp"
+            android:layout_marginTop="13dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/user_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/avatar_profile_default" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="12dp"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Andrei Lashkevich"
+                    android:textColor="@color/black_text"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:id="@+id/stars"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="horizontal" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/review"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Vwry very good spot in whateewer very good play market bla bla bla bla "
+            android:textColor="@color/black_text"
+            android:textSize="14sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="3 jun 2016"
+            android:textColor="#a3a3a3"
+            android:textSize="13sp" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/divider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="12dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_review_like_empty"/>
+            <TextView
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="9"
+                android:textColor="#a3a3a3"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_review_dislike_empty"/>
+            <TextView
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="9"
+                android:textColor="#a3a3a3"
+                />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
