--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -61,6 +61,7 @@
             android:textSize="14sp" />
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/review_photos_rc"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp" />
