--- a/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/accent</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
-        <item name="android:actionMenuTextColor">@color/orange</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
