--- a/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
@@ -72,4 +72,52 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_height="14dp"
+        android:layout_marginTop="8dp">
+        <TextView
+            android:textSize="13sp"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#ed1b24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="expert"/>
+    </LinearLayout>
+    <TextView
+        android:gravity="center"
+        android:layout_marginTop="9dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#616161"
+        android:text="Info about me"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/divider"/>
+        <TextView
+            android:textSize="10sp"
+            android:textColor="#616161"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="95dp"
+            android:background="@drawable/border_profile_card_dive_spots"
+            android:layout_height="23dp"
+            android:text="@string/dive_spots"/>
+        <ImageView
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/divider"/>
+    </LinearLayout>
 </LinearLayout>
