--- a/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_profile_info.xml
@@ -204,7 +204,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:background="#f6f6f6f">
+        android:background="#f6f6f6">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
