--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
@@ -271,12 +271,21 @@
                 app:et_labelEnable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
+        </LinearLayout>
             <Button
                 android:id="@+id/btn_save_sealife"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="38dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="15sp"
+                android:textColor="@color/black_text"
+                android:text="@string/btn_save"
+                android:background="@drawable/border_button_orange_2px"
                 />
-        </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
