--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
@@ -27,9 +27,9 @@
             android:id="@+id/add_manualy"
             android:layout_width="180dp"
             android:layout_height="45dp"
-            android:text="ADD MANUALLY"
+            android:text="@string/add_manually"
             android:textSize="15sp"
-            android:background="@color/orange"
+            android:background="@drawable/border_button_orange_2px"
             android:layout_centerInParent="true" />
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
