--- a/trunk/ddscanner/app/src/main/res/layout/product_list_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_list_fragment.xml
@@ -44,6 +44,15 @@
         android:src="@drawable/ic_acb_map"
         app:backgroundTint="@color/white"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="14dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_ds_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_acb_plus"
+        app:backgroundTint="@color/orange"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="14dp"/>
 </RelativeLayout>
