--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -9,7 +9,20 @@
 
     <include layout="@layout/view_toolbar"/>
 
+    <com.rey.material.widget.ProgressView
+        android:layout_gravity="center"
+        android:id="@+id/progressBarFull"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
+        app:pv_autostart="true"
+        app:pv_circular="true"
+        app:pv_progressMode="indeterminate"
+        app:pv_progressStyle="@style/CircularProgress" />
+
     <ScrollView
+        android:id="@+id/main_layout"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -245,11 +258,12 @@
                 <ImageView style="@style/DividerStyle" />
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="56dp"
+                    android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:layout_height="56dp"
                         style="@style/CharacteristicsDiveSpotListIcons"
                         android:src="@drawable/ic_addds_desc" />
 
