--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -2,9 +2,116 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Profile"/>
+        android:layout_height="300dp"
+        android:orientation="vertical"
+        android:background="@color/white">
+        <ImageView
+            android:id="@+id/user_avatar"
+            android:layout_marginTop="32dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:src="@drawable/avatar_profile_default"/>
+        <TextView
+            android:id="@+id/user_name"
+            android:text="Jason statham"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_text"/>
+        <LinearLayout
+            android:layout_marginTop="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:background="@color/black_text"/>
+            <TextView
+                android:layout_marginLeft="7dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Expert"
+                android:textSize="13sp"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="#ed1b24"/>
+        </LinearLayout>
+        <TextView
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="43dp"
+            android:layout_marginRight="43dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#616161"
+            android:textSize="13sp"
+            android:text="Cdc Issues Health Alert Notivce For travelers To Usa From Hon"/>
+        <LinearLayout
+            android:layout_marginTop="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <LinearLayout
+                android:background="@drawable/border_gray_100px"
+                android:orientation="horizontal"
+                android:layout_width="94dp"
+                android:layout_height="42dp"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_profile"/>
+                <TextView
+                    android:id="@+id/user_comments"
+                    style="@style/ProfileNumberDivespotsSrtyle"
+                    android:text="354"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="13dp"
+                android:background="@drawable/border_gray_100px"
+                android:orientation="horizontal"
+                android:layout_width="94dp"
+                android:layout_height="42dp"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_like_profile"/>
+                <TextView
+                    android:id="@+id/user_likes"
+                    style="@style/ProfileNumberDivespotsSrtyle"
+                    android:text="2K"/>
+            </LinearLayout>
+            <LinearLayout
+                android:background="@drawable/border_gray_100px"
+                android:orientation="horizontal"
+                android:layout_width="94dp"
+                android:layout_height="42dp"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_dislike_profile"/>
+                <TextView
+                    android:id="@+id/user_dislikes"
+                    style="@style/ProfileNumberDivespotsSrtyle"
+                    android:text="9"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <ImageView
+        style="@style/DividerStyleFull"/>
+
+    <ImageView
+        android:layout_marginTop="15dp"
+        style="@style/DividerStyleFull"/>
+
+
 </LinearLayout>
