--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -125,6 +125,15 @@
         <item name="android:textColor">@color/black_text</item>
     </style>
 
+    <style name="ProfileNumberDivespotsSrtyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">#616161</item>
+        <item name="android:layout_marginLeft">7dp</item>
+    </style>
+
    <!-- <style name="SealifeInputs">
         <item name="app:et_dividerHeight">0dp</item>
         <item name="app:et_dividerColor">@android:color/transparent</item>
@@ -144,6 +153,12 @@
         <item name="android:scaleType">centerCrop</item>
         <item name="android:src">@drawable/divider</item>
         <item name="android:layout_marginLeft">65dp</item>
+    </style>
+    <style name="DividerStyleFull">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:src">@drawable/divider</item>
     </style>
 
 </resources>
